--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -134,3 +134,67 @@ input{
     border-radius: 4px;
     background-color:  rgb(4, 60, 163);
 }
+
+
+.table {
+    width: 100%;
+    max-width: 100%;
+    margin-bottom: 1rem;
+    background-color: transparent;
+    border-collapse: collapse;
+  }
+  
+  .table th,
+  .table td {
+    padding: 0.75rem;
+    vertical-align: top;
+    border-top: 1px solid #dee2e6;
+  }
+  
+  .table thead th {
+    vertical-align: bottom;
+    border-bottom: 2px solid #dee2e6;
+  }
+  
+  .table-striped tbody tr:nth-of-type(odd) {
+    background-color: rgba(0, 0, 0, 0.096); /* Color de fondo alternativo para filas impares */
+  }
+  
+
+  .table-hover tbody tr:hover {
+    background-color: rgba(0, 0, 0, 0.137); /* Color de fondo al pasar el cursor sobre la fila */
+  }
+
+
+  .shadow-lg {
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.356), 0 1px 3px rgba(0, 0, 0, 0.24); /* Valores para una sombra más pronunciada */
+  }
+
+  .encabezado{
+    background-color: rgb(240, 75, 199);
+  }
+
+
+  .my-form-control {
+    display: block;
+    width: 96%;
+    padding: 0.375rem 0.75rem;
+    margin: 5px;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 0.5px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  }
+  
+  .my-form-control:focus {
+    border: 0.5px solid  rgba(212, 18, 18, 0.096);
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(57, 58, 58, 0.25);
+  }
+  
+   
+  
